[package]
name = "player_lib"
version = "0.1.0"
authors = ["haozi23333 <i@haozi.moe>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "player_lib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
ears = "0.7.0"
